# research_dashboard

./: .gitignore  README.md  Ruqirements.md  index.html  package-lock.json  package.json
docs/backend/: architecture.md
docs/datasource/: SCI目录 20260216.csv  daily_arxiv.sql  daily_arxiv_2.sql  design.md  import_venues.py  insert_test_data.py  refresh_dev.py  refresh_sql.py  research_dashboard.sql
docs/frontend/: Requirements.md  Ruqirements.md
src/: main.tsx
src-tauri/: Cargo.toml  build-mlx-service.sh  mlx_chat_service.py  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  macos.json
src-tauri/icons/: icon.icns
src-tauri/src/: layout.rs  lib.rs  main.rs  settings.rs
src-tauri/src/controller/: chat.rs  daily.rs  favorites.rs  history.rs  mod.rs  papers.rs  stats.rs  subscriptions.rs
src-tauri/src/crawler/: engine.rs  mod.rs
src-tauri/src/dao/: chat.rs  daily.rs  favorites.rs  history.rs  manual_add.rs  mod.rs  papers.rs  stats.rs  subscriptions.rs  venues.rs
src-tauri/src/database/: chat.rs  daily.rs  favorites.rs  history.rs  mod.rs  models.rs  papers.rs  stats.rs  subscriptions.rs
src-tauri/src/llm/: cloud.rs  mlx.rs  mod.rs  types.rs
src-tauri/src/models/: chat.rs  daily.rs  favorite.rs  frontend.rs  history.rs  layout.rs  mod.rs  paper.rs  settings.rs  stats.rs  subscription.rs  venue.rs
src-tauri/src/service/: chat.rs  daily.rs  favorites.rs  history.rs  manual_add.rs  mod.rs  papers.rs  stats.rs  subscriptions.rs  venues.rs
src/app/: App.tsx  Router.tsx  ThemeProvider.tsx
tests/: test_crawler.py
(+88 files in other folders)
