[package]
name = "research_dashboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
dirs = "5"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for LLM)
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Sorting utilities
itertools = "0.13"
tauri-plugin-dialog = "2.7.0"
